@@ -10,6 +10,58 @@ void tl880_set_dpc_pll_const(struct tl880_dev *tl880dev, unsigned long a, unsign
 	write_register(tl880dev, 0x5800, (((((a & 0x3ff) << 8) | (b & 0x1f)) << 4) | (c & 3)) << 4);
 }
 
+unsigned long tl880_calc_dpc_pll_const(struct tl880_dev *tl880dev, unsigned long a, unsigned char b, unsigned char c)
+{
+	return (((((a & 0x3ff) << 8) | (b & 0x1f)) << 4) | (c & 3)) << 4;
+}
+
+
+
+/* This function has not been fully tested and may be incorrect */
+/* I would probably discard this function and store these values as part of a mode array */
+void tl880_set_dpc_clock(struct tl880_dev *tl880dev, u32 xres, u32 yres, s32 interlace)
+{
+	unsigned long val = 0;
+	unsigned long var_4 = 1;
+	
+	/* tagContext->0x264 is xres */
+
+	switch(xres) {
+		case 1024:
+			val = 0x01151bb0;
+			break;
+		case 1440:
+			val = 0x00e619b0;
+			break;
+		case 1280:
+		case 1920:
+			if(1 /* cJanus->0x16720 */) {
+				val = 0x98280;
+				var_4 = 0;
+			} else {
+				val = tl880_calc_dpc_pll_const(tl880dev, 0x14, 2, 0);
+			}
+			break;
+	}
+
+	if(interlace) {
+		val = 0x60070;
+	} else if(1 /* cJanus->0x16720 != 1 */) {
+		val = 0x60050;
+	} else if(0 /* cJanus->0x16724 == 0x10 */) {
+		val = 0x60050;
+	} else {
+		val = 0x60070;
+	}
+
+	write_register(tl880dev, 0x5800, val);
+	write_register(tl880dev, 0x5d14, 0);
+	tl880_set_gpio(tl880dev, 6, var_4);
+}
+	
+			
+
+
 /* XXX: This function is not finished! */
 void tl880_init_dpc_pll(struct tl880_dev *tl880dev)
 {
@@ -17,6 +69,8 @@ void tl880_init_dpc_pll(struct tl880_dev *tl880dev)
 	
 	write_register(tl880dev, 0x10014, 0x80000000);
 
+#if 0
+	/* set_dpc_clock and set_dpc_pll_const are now implemented */
 	/* set_dpc_clock */
 	{
 		/* write_register(tl880dev, 0x5800, 0x60070); */
@@ -38,6 +92,8 @@ void tl880_init_dpc_pll(struct tl880_dev *tl880dev)
 		}
 		write_register(tl880dev, 0x5d14, 0x0);
 	}
+#endif
+	tl880_set_dpc_clock(tl880dev, 1024, 768, 0);
 
 	for(i = 0; i < 10; i++) {
 		read_register(tl880dev, 0x10014);
@@ -46,18 +102,21 @@ void tl880_init_dpc_pll(struct tl880_dev *tl880dev)
 	write_register(tl880dev, 0x10014, 0);
 }
 
-#if 0
 void tl880_dpc_video_sync_dvd(struct tl880_dev *tl880dev)
 {
 	static unsigned long val = 1;
 	static unsigned long field_select = 0;
 	static unsigned long delay_cnt = 0;
+	static unsigned long dpc_hsync_cnt = 0;
+	unsigned long var_10 = 0;
 	
+	/*
 	edi = gpJanus;
 	esi = cJanus->0x10388;
-	dpc_hsync_cnt++;
 	ebx = 0;
-	if((cJanus->0x10388)->0x26c != 0) {
+	*/
+	dpc_hsync_cnt++;
+	if(0 /* (cJanus->0x10388)->0x26c != 0 */) {
 		goto loc_294ea;
 	}
 
@@ -91,81 +150,91 @@ loc_294e1:
 	goto loc_295c9;
 
 loc_294ea:
-	ebp = 1;
+	/* ebp = 1; */
 
+	/* field_select xor= ebp */
 	field_select ^= 1;
 
 	write_regbits(tl880dev, 0x10000, 0, 0, field_select);
 
+	if(field_select == 0) {
+		goto loc_294e1;
+	}
+
 	var_10 = 1;
 
 loc_29511:
-	ebp = &(cJanus->0xf4);
-	if(cJanus->0xf4 == 0 || cJanus->0xf8 == 0) {
+	/* ebp = &(cJanus->0xf4); */
+	if(0 /* cJanus->0xf4 == 0 || cJanus->0xf8 == 0 */) {
 		goto loc_29589;
 	}
 
 	/* StartMcu() */
 
-	cJanus->0xf4 = 0;
-	if((cJanus->0x10388)->0x27c == 0) {
+	//cJanus->0xf4 = 0;
+	if(0 /* (cJanus->0x10388)->0x27c == 0 */) {
 		goto loc_29551;
 	}
-	if((cJanus->0x10388)->0x284 == 0) {
+	if(0 /* (cJanus->0x10388)->0x284 == 0 */) {
 		goto loc_29563;
 	}
 
 	/* StartVpip(cJanus->0x10388) */
 	
+	/*
 	(cJanus->0x10388)->0xb70 = 0;
+	*/
 
 	goto loc_29563;
 
-loc_29511:
-	if((cJanus->0x10388)->0x284 == 0) {
+loc_29551:
+	if(0 /* (cJanus->0x10388)->0x284 == 0 */) {
 		goto loc_29563;
 	}
 
+	/*
 	(cJanus->0x10388)->0xb70 = 1;
+	*/
 
 loc_29563:
-	if((cJanus->0x10388)->0xd4 != 3) {
+	if(0 /* (cJanus->0x10388)->0xd4 != 3 */) {
 		goto loc_29578;
 	}
 
-	(cJanus->0x10388)->0xb68 = 2;
+	/* (cJanus->0x10388)->0xb68 = 2; */
 	goto loc_2957e;
 
 loc_29578:
-	(cJanus->0x10388)->0xb68 += 1;
+	/* (cJanus->0x10388)->0xb68 += 1; */
 
 loc_2957e:
 	delay_cnt = 0;
-	goto loc_296b7;
+	/* goto loc_296b7; */
+	return;
 
 loc_29589:
 	if(delay_cnt > 0) {
 		goto loc_295c3;
 	}
 
-	ebp = &(cJanus->0x10377);
-	if(cJanus->0x10377 == 0) /* byte */ {
+	/* ebp = &(cJanus->0x10377); */
+	if(0 /* cJanus->0x10377 == 0 */) /* byte */ {
 		goto loc_295a9;
 	}
 
 	/* EnableBVDO() */
 
-	(cJanus->0x10377)->0 = 0; /* byte */
+	//(cJanus->0x10377)->0 = 0; /* byte */
 
 loc_295a9:
-	ebp = &(cJanus->0x10364);
-	if(cJanus->0x10364 == 0) /* byte */ {
+	/* ebp = &(cJanus->0x10364); */
+	if(1 /* cJanus->0x10364 == 0 */) /* byte */ {
 		goto loc_295c9;
 	}
 
 	/* EnableAux() */
 
-	(cJanus->0x10364) = 0; /* byte */
+	//(cJanus->0x10364) = 0; /* byte */
 
 	goto loc_295c9;
 
@@ -173,40 +242,46 @@ loc_295c3:
 	delay_cnt--;
 
 loc_295c9:
-	if((cJanus->0x10388)->0xb6c == 0 || cJanus->0xf8 != 0) {
-		goto loc_296b7;
+	if(0 /* (cJanus->0x10388)->0xb6c == 0 || cJanus->0xf8 != 0 */) {
+		/* goto loc_296b7; */
+		return;
 	}
 
+	/*
 	ecx = (cJanus->0x10388)->0xba0;
 	eax = &((cJanus->0x10388)->0xba0);
-	if((cJanus->0x10388)->0xba0 <= 0) {
+	*/
+	if(0 /* (cJanus->0x10388)->0xba0 <= 0 */) {
 		goto loc_295f9;
 	}
 	/*
 	ecx -= 1;
 	[eax] = ecx;
 	*/
+	/*
 	(cJanus->0x10388)->0xba0 -= 1;
+	*/
 
-	goto loc_296b7;
+	/* goto loc_296b7; */
+	return;
 
 loc_295f9:
-	if((cJanus->0x10388)->0x27c == 0) {
+	if(1 /* (cJanus->0x10388)->0x27c == 0 */) {
 		goto loc_29653;
 	}
 
-	if(1 /*DpcSync(&(cJanus->0x10388), var_10)*/) {
-		goto loc_296b7;
+	if(0 /*DpcSync(&(cJanus->0x10388), var_10)*/) {
+		/* goto loc_296b7; */
+		return;
 	}
 
 	/* UpdateDispBufReg((cJanus->0x10388)->0x1d4, (cJanus->0x10388)->0x1d8); */
 
-	if((cJanus->0x10388)->0x284 == 0) {
+	if(0 /* (cJanus->0x10388)->0x284 == 0 */) {
 		goto loc_29698;
 	}
 
-	ebp = &(cJanus->0x10388)->0xb70;
-	if((cJanus->0x10388)->0xb70 == 0) {
+	if(0 /* (cJanus->0x10388)->0xb70 == 0 */) {
 		goto loc_29698;
 	}
 
@@ -214,25 +289,29 @@ loc_295f9:
 
 	/* StartVpip(&(cJanus->0x10388)); */
 
+	/*
 	(cJanus->0x10388)->0 = 0;
+	*/
 
 	goto loc_29698;
 
 loc_29653:
-	if((cJanus->0x10388)->0x28c == 0 || (cJanus->0x10388)->0x284 == 0) {
+	if(0 /* (cJanus->0x10388)->0x28c == 0 || (cJanus->0x10388)->0x284 == 0 */) {
 		goto loc_29675;
 	}
 
-	if(1 /* DeinterlaceSync(&(cJanus->0x10388), var_10); */) {
-		goto loc_296b7;
+	if(0 /* DeinterlaceSync(&(cJanus->0x10388), var_10); */) {
+		/* goto loc_296b7; */
+		return;
 	}
 
 	goto loc_29698;
 
 loc_29675:
 
-	if(1 /* DpcSync(&(cJanus->0x10388), var_10) */) {
-		goto loc_296b7;
+	if(0 /* DpcSync(&(cJanus->0x10388), var_10) */) {
+		/* goto loc_296b7; */
+		return;
 	}
 
 	/* UpdateDispBufReg((cJanus->0x10388)->0x1d4, (cJanus->0x10388)->0x1d8); */
@@ -240,19 +319,22 @@ loc_29675:
 loc_29698:
 	/* eax = devGetSTCRaw(); // Demux_GetSTC() */
 
+	/*
 	ecx = 0x5a;
 	edx = 0;
 	eax /= 0x5a;
 	(cJanus->0x10388)->0xba4 = eax;
+	*/
 
 	/* StartMcu(); */
 
-	(cJanus->0x10388)->0xb6c = 0;
+	/* (cJanus->0x10388)->0xb6c = 0; */
 
-loc_296b7:
+	/* This is to make gcc shut up: */
+	var_10 = 0;
+
+/* loc_296b7: */
 }
-
-#endif
 
 void tl880_dpc_video_sync(struct tl880_dev *tl880dev)
 {
@@ -275,7 +357,7 @@ void tl880_dpc_field0(struct tl880_dev *tl880dev)
 	*/
 
 	/* VopOn returns bit 4 of 0x10000 */
-	if(0 /* CDma::VopOn(); */) {
+	if(0 /* !CDma::VopOn(); */) {
 		return;
 	}
 
@@ -292,6 +374,25 @@ void tl880_dpc_field0(struct tl880_dev *tl880dev)
 	} else {
 		/* CDma::VopIsrOdd(); */
 	}
+
+	printk(KERN_DEBUG "tl880: dpc field0 interrupt - count %lu\n", dpc_eof0_count);
+}
+
+void tl880_dpc_field1(struct tl880_dev *tl880dev)
+{
+	static unsigned long dpc_eof1_count = 0;
+
+	dpc_eof1_count++;
+
+	if(0 /* !CDma::VopOn(); */) {
+		return;
+	}
+
+	/* eax = cJanus->0; */
+	/* ecx = (cJanus->0)->0x110; */
+	/* CDma::VopIsrEven(); */
+
+	printk(KERN_DEBUG "tl880: dpc field1 interrupt - count %lu\n", dpc_eof1_count);
 }
 
 int tl880_dpc_int(struct tl880_dev *tl880dev)
@@ -300,9 +401,8 @@ int tl880_dpc_int(struct tl880_dev *tl880dev)
 
 	tl880dev->dpc_type = read_register(tl880dev, 0x1000c) & read_register(tl880dev, 0x10008);
 
-	printk(KERN_DEBUG "tl880: dpc interrupt: 0x%04lx\n", 
-		tl880dev->dpc_type);
-
+	printk(KERN_DEBUG "tl880: dpc interrupt: 0x%04lx - count %lu\n", 
+		tl880dev->dpc_type, tl880dev->dpc_count);
 
 	if(tl880dev->dpc_type & 4) {
 		tl880_dpc_video_sync(tl880dev);
@@ -313,13 +413,15 @@ int tl880_dpc_int(struct tl880_dev *tl880dev)
 	}
 
 	if(tl880dev->dpc_type & 0x40) {
-		/* IntDpcEof1 */
+		tl880_dpc_field1(tl880dev);
 	}
 
 	tl880dev->dpc_type = 0;
 
-	/* Since this interrupt isn't handled yet, disable it */
-	write_register(tl880dev, 0x10008, 0);
+	/* Since this interrupt isn't fully handled yet, disable it after a while */
+	if(tl880dev->dpc_count >= 600) {
+		write_register(tl880dev, 0x10008, 0);
+	}
 
 	return 0;
 }
